# tiny-moleculer-py

./: .gitignore  LICENSE  README.md  pyproject.toml
.cursor/rules/: python.mdc  requirements.mdc
examples/: opencv_usage.py  play.py  simple_usage.py
examples/compose/: run-js-node.sh
examples/compose/js-service/: .gitignore  sample.ts
examples/helper/: log_helper.py
src/: main.py
src/moleculer_py/: __init__.py  broker.py  data.py  loadbalance.py  packets.py  redis_transport.py  service.py  transit.py  type.py  utils.py
tests/: test_data_unit.py  test_loadbalance_unit.py  test_packets_unit.py  test_service_unit.py
