[project]
name = "tiny-moleculer-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dataclasses-json>=0.6.7",
    "redis>=6.2.0",
]

[dependency-groups]
dev = [
    "aioconsole>=0.8.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]
